--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "update-status": "node -e \"const fs=require('fs');const path=require('path');const statusPath=path.join(__dirname,'src','data','status.json');const status={lastUpdate:new Date().toISOString()};fs.writeFileSync(statusPath,JSON.stringify(status));\"",
     "predeploy": "yarn convert-csv && yarn update-status && yarn build",
     "deploy": "gh-pages -d build",
-    "updateTasks": "node scripts/updateTasks.js"
+    "update-tasks": "node scripts/updateTasks.js"
   },
   "browserslist": {
     "production": [
